[project]
name = "aio"
version = "0.1.0"
description = "AI Orchestrator built with LangChain and DeepAgents"
requires-python = ">=3.12"
dependencies = [
    "langchain_mcp_adapters",
    "langchain_ollama",
    "langchain_openai",
    "langchain_community",
    "deepagents",
    "streamlit",
    "oci"
]

[project.scripts]
aio_cli = "aio.core.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
